commented out the mongo db credentails
removed UI module from profile default

--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
         <module>collectors/scm/github</module>
         <module>collectors/scm/subversion</module>
         <module>collectors/scm/gitlab</module>
-        <module>UI</module>
+        <!--<module>UI</module>-->
       </modules>
       <build>
         <pluginManagement>
