commented out the mongo db credentails
removed UI module from profile default

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -207,5 +207,11 @@
           <artifactId>gson</artifactId>
           <scope>test</scope>
       </dependency>
+
+      <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-config</artifactId>
+      </dependency>
+
   </dependencies>
 </project>
