--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.2.5.RELEASE</version>
+    <version>1.3.0.RELEASE</version>
   </parent>
 
   <licenses>
@@ -55,6 +55,18 @@
     </repository>
   </distributionManagement>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-config</artifactId>
+        <version>1.3.0.RELEASE</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <properties>
     <spring-data-releasetrain.version>Gosling-RELEASE</spring-data-releasetrain.version>
     <mongodb.version>3.0.2</mongodb.version>
@@ -66,8 +78,39 @@
     <jacoco.version>0.7.6.201602180812</jacoco.version>
     <joda-time.version>2.7</joda-time.version>
     <joda-convert.version>1.8.1</joda-convert.version>
+    <logback.version>1.1.7</logback.version>
+    <!--<spring.boot.version>1.3.0.RELEASE</spring.boot.version>-->
+    <slf4j.version>1.7.21</slf4j.version>
+
   </properties>
 
+
+  <dependencies>
+
+    <!--&lt;!&ndash;Logging Dependencies &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.boot</groupId>-->
+      <!--<artifactId>spring-boot-starter-logging</artifactId>-->
+    <!--</dependency>-->
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
