commented out the mongo db credentails
removed UI module from profile default

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,3 +7,5 @@ dbreplicaset=false
 dbhostport=localhost:27017
 server.contextPath=/api
 server.port=8080
+spring.application.name=api-server
+software.version=1
