--- a/UI/pom.xml
+++ b/UI/pom.xml
@@ -18,6 +18,12 @@
 
   <build>
     <plugins>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
         <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
             <version>2.6</version>
@@ -74,8 +80,8 @@
             <configuration>
               <nodeVersion>v5.4.1</nodeVersion>
               <npmVersion>2.14.15</npmVersion>
-                <nodeDownloadRoot>http://nodejs.org/dist/</nodeDownloadRoot>
-                <npmDownloadRoot>http://registry.npmjs.org/npm/-/</npmDownloadRoot>
+                <!--<nodeDownloadRoot>http://nodejs.org/dist/</nodeDownloadRoot>-->
+                <!--<npmDownloadRoot>http://registry.npmjs.org/npm/-/</npmDownloadRoot>-->
             </configuration>
           </execution>
 
@@ -139,4 +145,18 @@
       </plugin>
     </plugins>
   </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
